fixed overlapping issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -155,6 +155,7 @@ main {
   height: fit-content;
   background-color: #fff;
   position: absolute;
+  z-index: 1000;
   left: 0;
   top: 0;
   display: none;
